devel
-----

* Throttle work coming from low priority queue, according to a constant
  and to an estimate taking into account fanout for multi-shard operations.

* Move to 4 priority levels "low", "medium", "high" and "maintenance" in
  scheduler to ensure that maintenance work and diagnostics is always
  possible, even in the case of RocksDB throttles. Do not allow any
  RocksDB work on "maintenance".

* Commit replications on high priority queue.

* Essentially get rid of timeout in replication to drop followers. This
  is now entirely handled via reboot and failure tracking. The timeout
  has now a default minimum of 15 minutes but can still be configured via
  options.

* Additional metrics for all queue lengths and low prio ongoing work.

* New metric for number and total time of replication operations.

* New metrics for number of internal requests in flight, internal request
  duration, and internal request timeouts

* Fix Gauge class' assignment operators.

* Fix Windows directory creation error handling.

* Add an AQL query kill check during early pruning. Fixes issue #13141.

* Remove a case in which followers were dropped unnecessarily in streaming
  transactions that replicated to the same follower.

* Fixed ES-662 by introducing refactored thread pool to make more efficient
  consolidation and commit routines for links of ArangoSearch views.

  Added new command line options for fine-grained ArangoSearch maintenance
  control:
  - `--arangosearch.commit-threads` - max number of ArangoSearch commit
    threads
  - `--arangosearch.commit-threads-idle` - min number of ArangoSearch
    commit threads
  - `--arangosearch.consolidation-threads` - max number of ArangoSearch
    consolidation threads
  - `--arangosearch.consolidation-threads-idle` - min number of ArangoSearch
    consolidation threads

  Deprecated the following command line options:
  - `--arangosearch.threads` - will be used in --arangosearch.commit-threads`